- code review, - added hidden keyboard functional

--- a/FitBitCommunication/FitBitCommunication/Base.lproj/Main.storyboard
+++ b/FitBitCommunication/FitBitCommunication/Base.lproj/Main.storyboard
@@ -31,7 +31,7 @@
                                 <rect key="frame" x="64" y="239" width="247" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" textContentType="email"/>
+                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" returnKeyType="continue" enablesReturnKeyAutomatically="YES" textContentType="email"/>
                                 <connections>
                                     <outlet property="delegate" destination="k6u-fe-c1J" id="2kF-FS-KhC"/>
                                 </connections>
