--- a/FitBitCommunication/FitBitCommunication/Base.lproj/Main.storyboard
+++ b/FitBitCommunication/FitBitCommunication/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                                     <outlet property="delegate" destination="k6u-fe-c1J" id="OSA-qX-VHH"/>
                                 </connections>
                             </textField>
-                            <textField opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tt4-7t-K1k">
+                            <textField opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="user@finbit.com" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tt4-7t-K1k">
                                 <rect key="frame" x="64" y="117" width="247" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
